[build-system]
# cuvec>=2.8.0
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4",
            "ninst>=0.12.0", "cuvec-base", "miutil[cuda]>=0.4.0",
            "scikit-build>=0.11.0", "cmake>=3.18", "ninja"]

[tool.setuptools_scm]
write_to = "niftypet/nimpa/_dist_ver.py"
write_to_template = "__version__ = '{version}'\n"
