[metadata]
name=nimpa
description=CUDA-accelerated Python utilities for high-throughput PET/MR image processing and analysis
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache 2.0
license_file=LICENCE
url=https://github.com/NiftyPET/NIMPA
project_urls=
    Changelog=https://github.com/NiftyPET/NIMPA/releases
    Documentation=https://niftypet.readthedocs.io
author=Pawel Markiewicz
author_email=p.markiewicz@ucl.ac.uk
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=PET, MR, processing, analysis
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
zip_safe=False
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    ninst>=0.7.1
    numpy>=1.14
    miutil[cuda]>=0.4.0
    scikit-build>=0.11.0
    cmake>=3.18
    ninja
install_requires=
    miutil[nii]>=0.4.2
    nibabel>=2.4.0
    numpy>=1.14
    ninst>=0.4.0
    pydicom>=1.0.2
    scipy
    setuptools
    spm12
    # SimpleITK>=1.2.0
python_requires=>=3.6
[options.extras_require]
dev=
    pre-commit
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
    codecov
plot=miutil[plot]

[isort]
profile=black
line_length=99
known_first_party=niftypet,tests

[tool:pytest]
timeout=300
log_level=INFO
python_files=tests/test_*.py
addopts=-v --tb=short -rxs -W=error -n=auto --durations=0 --durations-min=2 --cov=niftypet --cov-report=term-missing --cov-report=xml
