[metadata]
name=nimpa
description=CUDA-accelerated Python utilities for high-throughput neuroimage processing and analysis
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache 2.0
license_file=LICENCE
url=https://github.com/NiftyPET/NIMPA
project_urls=
    Changelog=https://github.com/NiftyPET/NIMPA/releases
    Documentation=https://niftypet.readthedocs.io
author=Pawel Markiewicz
author_email=p.markiewicz@ucl.ac.uk
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=PET, MR, processing, analysis
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
zip_safe=False
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    ninst>=0.9.0
    scikit-build>=0.11.0
    cmake>=3.18
    ninja
    cuvec>=2.8.0
    miutil[cuda]>=0.4.0
install_requires=
    cuvec>=2.3.1
    dcm2niix>=1.0.20220116
    dipy>=1.3.0
    miutil[nii]>=0.10.0
    nibabel>=2.4.0
    ninst>=0.4.0
    numcu
    numpy>=1.14
    pydicom>=1.0.2
    scipy
    setuptools
    spm12
    # SimpleITK>=1.2.0
python_requires=>=3.6
[options.extras_require]
dev=
    pre-commit
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
plot=miutil[plot]

[flake8]
max_line_length=99
extend-ignore=W504,E225,E228,E261,E701,P1
exclude=.git,__pycache__,build,dist,.eggs

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False

[isort]
profile=black
line_length=99
known_first_party=niftypet,tests

[tool:pytest]
timeout=300
log_level=INFO
python_files=tests/test_*.py
addopts=-v --tb=short -rxs -W=error -n=auto --durations=0 --durations-min=2 --cov=niftypet --cov-report=term-missing --cov-report=xml
